fix controls spacing

--- a/src/App/Components/Controls/Controls.scss
+++ b/src/App/Components/Controls/Controls.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 60px;
+  padding-right: 7px;
 
   .Button {
     display: flex;
